--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -277,8 +277,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:04.434616Z",
-     "start_time": "2019-09-12T08:06:04.430664Z"
+     "end_time": "2019-09-12T12:51:12.824798Z",
+     "start_time": "2019-09-12T12:51:12.820925Z"
     }
    },
    "outputs": [],
@@ -316,8 +316,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:04.546470Z",
-     "start_time": "2019-09-12T08:06:04.537177Z"
+     "end_time": "2019-09-12T12:51:12.937303Z",
+     "start_time": "2019-09-12T12:51:12.928295Z"
     }
    },
    "outputs": [],
@@ -417,8 +417,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:04.550603Z",
-     "start_time": "2019-09-12T08:06:04.547922Z"
+     "end_time": "2019-09-12T12:51:12.941609Z",
+     "start_time": "2019-09-12T12:51:12.939171Z"
     }
    },
    "outputs": [
@@ -446,8 +446,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:04.559735Z",
-     "start_time": "2019-09-12T08:06:04.552101Z"
+     "end_time": "2019-09-12T12:51:12.951214Z",
+     "start_time": "2019-09-12T12:51:12.943075Z"
     }
    },
    "outputs": [
@@ -541,8 +541,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:04.652883Z",
-     "start_time": "2019-09-12T08:06:04.645437Z"
+     "end_time": "2019-09-12T12:51:13.038266Z",
+     "start_time": "2019-09-12T12:51:13.031081Z"
     },
     "code_folding": []
    },
@@ -639,8 +639,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:04.864774Z",
-     "start_time": "2019-09-12T08:06:04.856739Z"
+     "end_time": "2019-09-12T12:51:13.227102Z",
+     "start_time": "2019-09-12T12:51:13.219524Z"
     }
    },
    "outputs": [],
@@ -708,8 +708,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:04.964535Z",
-     "start_time": "2019-09-12T08:06:04.960304Z"
+     "end_time": "2019-09-12T12:51:13.317995Z",
+     "start_time": "2019-09-12T12:51:13.313977Z"
     },
     "code_folding": []
    },
@@ -751,8 +751,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.074250Z",
-     "start_time": "2019-09-12T08:06:05.067028Z"
+     "end_time": "2019-09-12T12:51:13.416466Z",
+     "start_time": "2019-09-12T12:51:13.408028Z"
     }
    },
    "outputs": [
@@ -783,8 +783,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.176910Z",
-     "start_time": "2019-09-12T08:06:05.173557Z"
+     "end_time": "2019-09-12T12:51:13.523480Z",
+     "start_time": "2019-09-12T12:51:13.519259Z"
     }
    },
    "outputs": [],
@@ -820,8 +820,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.280449Z",
-     "start_time": "2019-09-12T08:06:05.277630Z"
+     "end_time": "2019-09-12T12:51:13.654412Z",
+     "start_time": "2019-09-12T12:51:13.651600Z"
     }
    },
    "outputs": [
@@ -876,9 +876,10 @@
     "\n",
     "To start off with, let's defined the cost vector c as:\n",
     "- c = 0.0 for no repair\n",
-    "- c = 0.2 for restricted request\n",
-    "- c = 0.4 for open request\n",
+    "- c = 0.15 for restricted request\n",
+    "- c = 0.45 for open request\n",
     "\n",
+    "(So the cost ratio of restricted:open is 1:3)\n",
     "Let's work through some examples to see how this definition of repair initiation works out.\n",
     "\n",
     "Say the listener receives the signal 'a_'. Remember that the order of possible meanings that each language assumes is: ['02', '03', '12', '13'].\n",
@@ -886,7 +887,7 @@
     "If the listener uses the following compositional language: ['aa', 'ab', 'ba', 'bb'], the set of possible interpretations $I_{u}$ consists of ['02', '03']. Thus, $|I_{u}| = 2$. Furthermore, the signal 'a_' maps unambiguously to meaning '0_' in the listener's language, which means that the listener has partial grasp of the meaning. Therefore, the repair initiator that is available to the listener is the restricted request '0?'. Given our definition of the probabilities of initiating repair or not above (as well as the cost vector _c_), this means that initiating repair or not will have the following probabilities for this listener given this utterance:\n",
     "\n",
     "$$\n",
-    "P(repair \\mid I_{u}, c) \\propto (1-(1/2))-0.2\\\\\n",
+    "P(repair \\mid I_{u}, c) \\propto (1-(1/2))-0.15\\\\\n",
     "P(no repair \\mid I_{u}, c) \\propto (1/2)-0.0\\\\\n",
     "$$\n",
     "\n",
@@ -898,8 +899,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.491129Z",
-     "start_time": "2019-09-12T08:06:05.487339Z"
+     "end_time": "2019-09-12T12:56:59.453083Z",
+     "start_time": "2019-09-12T12:56:59.447334Z"
     }
    },
    "outputs": [
@@ -907,13 +908,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(repair | compositional language) = 0.37499999999999994\n",
-      "P(no repair | compositional language) = 0.625\n"
+      "P(repair | compositional language) = 0.4117647058823529\n",
+      "P(no repair | compositional language) = 0.5882352941176471\n"
      ]
     }
    ],
    "source": [
-    "prop_to_prob_repair_compositional = (1.-(1./2.))-0.2\n",
+    "prop_to_prob_repair_compositional = (1.-(1./2.))-0.15\n",
     "prop_to_prob_no_repair_compositional = (1./2.)-0.0\n",
     "\n",
     "prop_to_probs_compositional = np.array([prop_to_prob_repair_compositional, prop_to_prob_no_repair_compositional])\n",
@@ -930,7 +931,7 @@
     "Now let's work through the same example, but with a listener using the following holistic language: ['aa', 'ba', 'ab', 'bb]. Remember that the order of meanings is: ['02', '03', '12', '13']. Given the same utterance, 'a_', the set of possible interpretations $I_{u}$ now consists of ['02', '12']. Thus, just like for the compositional language, $|I_{u}| = 2$. However, signal 'a_' does not map unambiguously to any partial meaning in this holistic language. Therefore, the repair initiator that is available to the listener is the open request '??'. Given our definition of the probabilities of initiating repair or not above (as well as the cost vector _c_), this means that initiating repair or not will have the following probabilities for this listener given this utterance:\n",
     "\n",
     "$$\n",
-    "P(repair \\mid I_{u}, c) \\propto (1-(1/2))-0.4\\\\\n",
+    "P(repair \\mid I_{u}, c) \\propto (1-(1/2))-0.45\\\\\n",
     "P(no repair \\mid I_{u}, c) \\propto (1/2)-0.0\\\\\n",
     "$$\n",
     "\n",
@@ -942,8 +943,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.586593Z",
-     "start_time": "2019-09-12T08:06:05.582813Z"
+     "end_time": "2019-09-12T12:57:17.948127Z",
+     "start_time": "2019-09-12T12:57:17.943960Z"
     }
    },
    "outputs": [
@@ -951,13 +952,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(repair | holistic language) = 0.16666666666666663\n",
-      "P(no repair | holistic language) = 0.8333333333333334\n"
+      "P(repair | holistic language) = 0.09090909090909088\n",
+      "P(no repair | holistic language) = 0.9090909090909091\n"
      ]
     }
    ],
    "source": [
-    "prop_to_prob_repair_holistic = (1.-(1./2.))-0.4\n",
+    "prop_to_prob_repair_holistic = (1.-(1./2.))-0.45\n",
     "prop_to_prob_no_repair_holistic = (1./2.)-0.0\n",
     "\n",
     "prop_to_probs_holistic = np.array([prop_to_prob_repair_holistic, prop_to_prob_no_repair_holistic])\n",
@@ -979,8 +980,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.681125Z",
-     "start_time": "2019-09-12T08:06:05.677775Z"
+     "end_time": "2019-09-12T12:57:28.335762Z",
+     "start_time": "2019-09-12T12:57:28.331167Z"
     }
    },
    "outputs": [
@@ -994,7 +995,7 @@
     {
      "data": {
       "text/plain": [
-       "2.25"
+       "4.529411764705883"
       ]
      },
      "execution_count": 13,
@@ -1014,7 +1015,7 @@
     "Now let's consider an example language of the 'other' category: ['aa', 'aa', 'ab', 'bb]. Remember that the order of meanings is: ['02', '03', '12', '13']. Given the same utterance, 'a_', the set of possible interpretations $I_{u}$ thus consists of ['02', '03', '12']. So $|I_{u}| = 3$. Signal 'a_' does not map unambiguously to any partial meaning in this holistic language, which means that again the listener can only use an open request repair initiator ('??'). This means that initiating repair or not will have the following probabilities for this listener given this utterance:\n",
     "\n",
     "$$\n",
-    "P(repair \\mid I_{u}, c) \\propto (1-(1/3))-0.4\\\\\n",
+    "P(repair \\mid I_{u}, c) \\propto (1-(1/3))-0.45\\\\\n",
     "P(no repair \\mid I_{u}, c) \\propto (1/3)-0.0\\\\\n",
     "$$\n",
     "\n",
@@ -1023,11 +1024,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.785266Z",
-     "start_time": "2019-09-12T08:06:05.781378Z"
+     "end_time": "2019-09-12T12:58:17.609600Z",
+     "start_time": "2019-09-12T12:58:17.605489Z"
     }
    },
    "outputs": [
@@ -1035,13 +1036,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(repair | other language) = 0.4444444444444445\n",
-      "P(no repair | other language) = 0.5555555555555555\n"
+      "P(repair | other language) = 0.39393939393939403\n",
+      "P(no repair | other language) = 0.606060606060606\n"
      ]
     }
    ],
    "source": [
-    "prop_to_prob_repair_other = (1.-(1./3.))-0.4\n",
+    "prop_to_prob_repair_other = (1.-(1./3.))-0.45\n",
     "prop_to_prob_no_repair_other = (1./3.)-0.0\n",
     "\n",
     "prop_to_probs_other = np.array([prop_to_prob_repair_other, prop_to_prob_no_repair_other])\n",
@@ -1058,7 +1059,7 @@
     "Finally, let's consider an example degenerate language: ['aa', 'aa', 'aa', 'aa']. Remember that the order of meanings is: ['02', '03', '12', '13']. Given the same utterance, 'a_', the set of possible interpretations $I_{u}$ thus consists of ['02', '03', '12', '13']. So $|I_{u}| = 4$. Signal 'a_' does not map unambiguously to any partial meaning in this holistic language, which means that again the listener can only use an open request repair initiator ('??'). This means that initiating repair or not will have the following probabilities for this listener given this utterance:\n",
     "\n",
     "$$\n",
-    "P(repair \\mid I_{u}, c) \\propto (1-(1/4))-0.4\\\\\n",
+    "P(repair \\mid I_{u}, c) \\propto (1-(1/4))-0.45\\\\\n",
     "P(no repair \\mid I_{u}, c) \\propto (1/4)-0.0\\\\\n",
     "$$\n",
     "\n",
@@ -1067,11 +1068,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:05.877769Z",
-     "start_time": "2019-09-12T08:06:05.873922Z"
+     "end_time": "2019-09-12T12:58:34.391140Z",
+     "start_time": "2019-09-12T12:58:34.386812Z"
     }
    },
    "outputs": [
@@ -1079,13 +1080,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(repair | degenerate language) = 0.5833333333333334\n",
-      "P(no repair | degenerate language) = 0.4166666666666667\n"
+      "P(repair | degenerate language) = 0.5454545454545454\n",
+      "P(no repair | degenerate language) = 0.45454545454545453\n"
      ]
     }
    ],
    "source": [
-    "prop_to_prob_repair_degenerate = (1.-(1./4.))-0.4\n",
+    "prop_to_prob_repair_degenerate = (1.-(1./4.))-0.45\n",
     "prop_to_prob_no_repair_degenerate = (1./4.)-0.0\n",
     "\n",
     "prop_to_probs_degenerate = np.array([prop_to_prob_repair_degenerate, prop_to_prob_no_repair_degenerate])\n",
@@ -1118,11 +1119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:06.144111Z",
-     "start_time": "2019-09-12T08:06:06.140854Z"
+     "end_time": "2019-09-12T12:58:37.414150Z",
+     "start_time": "2019-09-12T12:58:37.410857Z"
     }
    },
    "outputs": [],
@@ -1149,11 +1150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:06.231234Z",
-     "start_time": "2019-09-12T08:06:06.228362Z"
+     "end_time": "2019-09-12T12:58:38.561116Z",
+     "start_time": "2019-09-12T12:58:38.557815Z"
     }
    },
    "outputs": [
@@ -1181,11 +1182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:06.319060Z",
-     "start_time": "2019-09-12T08:06:06.316397Z"
+     "end_time": "2019-09-12T12:58:39.961976Z",
+     "start_time": "2019-09-12T12:58:39.958740Z"
     }
    },
    "outputs": [],
@@ -1207,11 +1208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:06.414034Z",
-     "start_time": "2019-09-12T08:06:06.411131Z"
+     "end_time": "2019-09-12T12:58:41.319883Z",
+     "start_time": "2019-09-12T12:58:41.316492Z"
     }
    },
    "outputs": [
@@ -1241,11 +1242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:06.507205Z",
-     "start_time": "2019-09-12T08:06:06.501128Z"
+     "end_time": "2019-09-12T12:58:42.925809Z",
+     "start_time": "2019-09-12T12:58:42.920127Z"
     }
    },
    "outputs": [],
@@ -1286,11 +1287,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:54.467254Z",
-     "start_time": "2019-09-12T08:06:54.463689Z"
+     "end_time": "2019-09-12T12:58:44.273565Z",
+     "start_time": "2019-09-12T12:58:44.270412Z"
     }
    },
    "outputs": [
@@ -1322,11 +1323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:06:59.792192Z",
-     "start_time": "2019-09-12T08:06:59.781151Z"
+     "end_time": "2019-09-12T12:58:45.689965Z",
+     "start_time": "2019-09-12T12:58:45.679558Z"
     }
    },
    "outputs": [],
@@ -1392,11 +1393,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:07:07.611453Z",
-     "start_time": "2019-09-12T08:07:07.604354Z"
+     "end_time": "2019-09-12T12:59:10.922589Z",
+     "start_time": "2019-09-12T12:59:10.914351Z"
     }
    },
    "outputs": [
@@ -1418,7 +1419,7 @@
       "i is:\n",
       "2\n",
       "response is:\n",
-      "02\n",
+      "12\n",
       "\n",
       "i is:\n",
       "3\n",
@@ -1428,7 +1429,7 @@
       "i is:\n",
       "4\n",
       "response is:\n",
-      "02\n"
+      "12\n"
      ]
     }
    ],
@@ -1437,7 +1438,7 @@
     "\n",
     "minimal_effort = True\n",
     "mutual_understanding = True\n",
-    "cost_vector = [0.0, 0.2, 0.4]  # costs of no repair, restricted request, and open request, respectively\n",
+    "cost_vector = [0.0, 0.15, 0.45]  # costs of no repair, restricted request, and open request, respectively\n",
     "\n",
     "example_lang = ['aa', 'ba', 'aa', 'bb']\n",
     "\n",
