--- a/compositionality_vs_redundancy.ipynb
+++ b/compositionality_vs_redundancy.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The table above suggests that in the simplest model, the repair + compositionality strategy is the preferred strategy not just under the combination of a pressure for learnability and minimal effort, but in any condition where there is a pressure for learnability, regardless of whether the pressure for minimal effort is also switched on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
