added thoughts on speeding up simulation run times

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -93,7 +93,78 @@
     "\n",
     "In order to still make it possible for iterated learning chains to transition from a language that uses forms of length 2 into a language that uses forms of length 4 and vice versa, we need to then also allow for languages that use a mixture of form lengths (e.g. three forms of length 2, and one form of length 4). This yields the following number of possible languages:\n",
     "\n",
-    "$$ (2^2+2^4)^4 = $$"
+    "$$ (2^2+2^4)^4 = 160000$$\n",
+    "\n",
+    "which means that compared to the Kirby et al. (2015) model (where there were ($(2^2)^4 = 256$ possible languages), the hypothesis space expands by a factor of 625. That is not ideal, because if we assume that simulation run times increase linearly with the size of the hypothesis space, a simulation that took 1 hour to run in our previous model would now take almost 4 weeks to run.\n",
+    "\n",
+    "However, this linear relationship between the simulation run times and the size of the hypothesis space holds when during learning, we actually loop through each hypothesis and update its posterior probability based on the data. There are possible alternatives:\n",
+    "\n",
+    "- Do not do exact inference over the hypothesis at all, but instead use Gibbs sampling (as used by Burkett & Griffiths, 2010, and Kirby et al., 2015)\n",
+    "- Intergenerational learning could be sped up by representing data as simple signal counts, and simply updating the posterior probability distribution for the full data set in one step, by doing multiplying the prior of the hypothesis with the likelihood of the signal to the power of the number of times it occurs in the data set. This should speed things up a little in intergenerational learning, but won't make a difference in intragenerational learning, because there we assume that the hearer updates their posterior in each interaction. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Possibility 2: Allow reduplication as grammatical rule, and increase alphabet size\n",
+    "\n",
+    "If instead of allowing for multiple form lengths, we instead increase the size of the alphabet $\\Sigma$ from 2 to 4, that will make the diversify signal strategy possible. More concretely, that would mean that instead of there being an alphabet $[a, b]$, there would be an alphabet $[a, b, c, d]$. \n",
+    "That would allow for the following example languages, where the bit at the end of the signal specifies whether the signal should be repeated (1) or not (0).\n",
+    "\n",
+    "\n",
+    "**Reduplication + compositional:**\n",
+    "\n",
+    "02 --> aa1\n",
+    "\n",
+    "03 --> ab1\n",
+    "\n",
+    "12 --> ba1\n",
+    "\n",
+    "13 --> bb1\n",
+    "\n",
+    "\n",
+    "**Diversify signal + holistic:**\n",
+    "\n",
+    "02 --> aa0\n",
+    "\n",
+    "03 --> bb0\n",
+    "\n",
+    "12 --> cc0\n",
+    "\n",
+    "13 --> dd0\n",
+    "\n",
+    "\n",
+    "**Repair + compositional:**\n",
+    "\n",
+    "02 --> aa0\n",
+    "\n",
+    "03 --> ab0\n",
+    "\n",
+    "12 --> ba0\n",
+    "\n",
+    "13 --> bb0\n",
+    "\n",
+    "\n",
+    "Choosing for this option would mean that instead of there being $(2ˆ2 + 2ˆ4) = 20$ possible forms, there would be $4ˆ2 = 16$ possible forms, and therefore $(4^2)^4 = 65536$ possible languages. In addition however, we'd need languages to have an extra bit that specifies whether signals are reduplicated or not (assuming there are only two options: reduplication ON versus reduplication OFF). That means that there'd be a total of $((4^2)^4)*2 = 131072$. So compared to possibility 1, possibility 2 only reduces the size of the hypothesis space by a factor of 1.22, which is perhaps not worth it, given that the language representations themselves would become a bit more complex, because they now contain a separate bit specifying whether signals should be reduplicated or not. In addition, this way of representing languages would make the 'reduplication' and 'diversify signal' strategies harder to distinguish, as can be seen in the example languages above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "Burkett, D., & Griffiths, T. L. (2010). Iterated learning of multiple languages from multiple teachers. The Evolution of Language: Proceedings of the 8th International Conference (EVOLANG8), Utrecht, Netherlands, 14-17 April 2010, 58–65.\n",
+    "\n",
+    "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
    ]
   },
   {
